--- a/app/src/main/res/layout/activity_display_bbdd.xml
+++ b/app/src/main/res/layout/activity_display_bbdd.xml
@@ -9,4 +9,20 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="xavi.minesweeper.DisplayBBDD">
 
+
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/txtResultado"
+            />
+    </ScrollView>
+<ListView
+android:id="@android:id/list"
+android:layout_width="wrap_content"
+android:layout_height="wrap_content">
+</ListView>
+
 </RelativeLayout>
